--- a/index.html
+++ b/index.html
@@ -205,6 +205,13 @@
                 <p>Fabiano Athaide</p>
             </div>
         </section>
+        <div class="apoio">
+            <h2>Apoie nosso trabalho</h2>
+            <p>Se nosso conteúdo está ajudando você, considere apoiar com uma contribuição via PIX.</p>
+            <p><strong>Chave PIX:</strong> <span id="chavePix">rivaldoyamaha.rf@gmail.com</span></p>
+            <button onclick="copiarPix()">Copiar Chave PIX</button>
+            <p id="copiado" style="color: #22c55e; display: none; margin-top: 0.5rem;">✅ Chave copiada!</p>
+        </div>
     </main>
     <footer class="footer">
         <div class="social-icons">
@@ -249,6 +256,7 @@
 </body>
 </html>
     
+
 
 
 
