--- a/index.html
+++ b/index.html
@@ -36,10 +36,13 @@
     </nav>
     <div class="container">
         <div class="header text-center">
-            <h2>Sua jornada sobre duas rodas começa aqui.</h2>
-            <p>Em nossa plataforma, a consultoria é mais do que um serviço: é um guia personalizado para a sua compra, manutenção, escolha de peças e planejamentos de orçamento. Queremos que você se sinta seguro e preparado, por isso oferecemos um curso gratuito que cobre o essencial, desde os primeiros passos até a manutenção básica.
-               Junte-se a nós e transforme sua experiência em algo extraordinário.
-            </p>
+            <article>
+                <h2>Sua jornada sobre duas rodas começa aqui.</h2>
+                <p>Em nossa plataforma, a consultoria é mais do que um serviço: é um guia personalizado para a sua compra, manutenção, escolha de peças e planejamentos de orçamento. Queremos que você se sinta seguro e preparado, por isso oferecemos um curso gratuito que cobre o essencial, desde os primeiros passos até a manutenção básica.
+                   Junte-se a nós e transforme sua experiência em algo extraordinário.
+                </p>
+                <a href="pages/curso.html" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">Conheça nosso Curso Gratuito</a>
+            </article>
         </div>
         <section id="galeria">
             <div class="carousel">
@@ -82,8 +85,8 @@
                         <p>Noções de preços de mercado (FIPE, tabela própria baseada na região e condição), análise de custo-benefício.
                     <li>Inspeção Técnica de Veículos Usados:</li>
                         <p>Acompanhamento em visitas (somente em Montes Claros - MG) para avaliação física da moto (motor, chassi, suspensão, elétrica, pneus, desgaste geral), identificação de vícios ocultos ou problemas futuros.</p><br>
-                    <h3>Preço: R$ 80,00</h3>
-                    <h4>ou "A partir de R$ 100,00/hora"</h4>
+                    <h3>Preço: R$ 60,00</h3>
+                    <h4>ou "A partir de R$ 80,00/hora"</h4>
                     <p><br><a href="pages/agendamento.html"
                         target="_blank" rel="noopener noreferrer" class="btn btn-whatsapp">Agendar Consulta</a></p>
                 </ul>
@@ -107,8 +110,8 @@
                         <p>Sugestão dos melhores produtos (filtros, óleos, pneus, pastilhas, kits de relação, acessórios de segurança/performance) com base em custo-benefício e qualidade.</p>
                     <li>Otimização de Performance e Segurança:</li>
                         <p>Recomendações para melhorar o desempenho, a pilotagem e a segurança da moto.</p><br>
-                    <h3>Preço: R$ 100,00</h3>
-                    <h4>ou "A partir de R$ 120,00/hora"</h4>
+                    <h3>Preço: R$ 80,00</h3>
+                    <h4>ou "A partir de R$ 100,00/hora"</h4>
                     <p><br><a href="pages/agendamento.html"
                         target="_blank" rel="noopener noreferrer" class="btn btn-whatsapp">Agendar Consulta</a></p>
                 </ul>
@@ -129,8 +132,8 @@
                         <p>Indicação de oficinas mecânicas e prestadores de serviço confiáveis na região, baseada em sua experiência e conhecimento do mercado local.</p>
                     <li>Acompanhamento de Orçamentos:</li>
                         <p>Ajuda o cliente a entender orçamentos de serviços e peças, garantindo que não pague a mais ou que o serviço seja realmente necessário.</p><br>
-                    <h3>Preço: R$ 60,00</h3>
-                    <h4>ou "A partir de R$ 80,00/hora"</h4>
+                    <h3>Preço: R$ 40,00</h3>
+                    <h4>ou "A partir de R$ 60,00/hora"</h4>
                     <p><br><a href="pages/agendamento.html"
                         target="_blank" rel="noopener noreferrer" class="btn btn-whatsapp">Agendar Consulta</a></p>
                 </ul>
@@ -169,7 +172,7 @@
                     e materiais (clique no botão do Menu, no canto superior esquerdo da pagina) que desmistificam a mecânica e te ajudam a cuidar melhor da sua moto.</p>
             </div>
         </section>
-        <section id="newsletter" class="form-container">
+        <section id="newsletter" class="apoio">
             <h2 class="section-title">Receba a NewsLetter Mensal</h2>
             <p style="text-align: center; margin-bottom: 1.5rem;">
                 Cadastre-se gratuitamente para receber dicas exclusivas, alertas de manutenção e novidades do Dr. Yamaha diretamente no seu e-mail.
@@ -177,7 +180,7 @@
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSfnCBsyV7TKFBBLcwIJxCXEiwVtwqFs6FaMem2iTmYCIvtdsw/viewform?usp=sharing&ouid=100901396024546504182"
                 target="_blank"
                 rel="noopener noreferrer"
-                class="btn btn-secondary" style="width: 100%; text-align: center;">Quero Receber</a>
+                class="btn btn-secondary" style="width: 50%; text-align: center;">Quero Receber</a>
         </section>
         <section id="video-section" class="container">
             <h3 class="section-title">Conheça nosso Trabalho em Vídeo</h3>
@@ -308,6 +311,7 @@
 </body>
 </html>
     
+
 
 
 
