--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <p>Em nossa plataforma, a consultoria é mais do que um serviço: é um guia personalizado para a sua compra, manutenção, escolha de peças e planejamentos de orçamento. Queremos que você se sinta seguro e preparado, por isso oferecemos um curso gratuito que cobre o essencial, desde os primeiros passos até a manutenção básica.
                    Junte-se a nós e transforme sua experiência em algo extraordinário.
                 </p>
-                <a href="pages/curso.html" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">Curso Gratuito</a>
+<!--                 <a href="pages/curso.html" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">Curso Gratuito</a> -->
             </article>
         </div>
         <section id="galeria">
@@ -312,6 +312,7 @@
 </body>
 </html>
     
+
 
 
 
