--- a/pages/curso.html
+++ b/pages/curso.html
@@ -15,14 +15,14 @@
     <div class="layout-wrapper">
         <nav class="course-nav">
             <ul>
-                <li><a href="../index.html">Pagina Inicial</a></li>
                 <li><a href="#oleo">1. Óleo</a></li>
                 <li><a href="#pneus">2. Pneus</a></li>
                 <li><a href="#relacao">3. Relação</a></li>
                 <li><a href="#freios">4. Freios</a></li>
                 <li><a href="#luzes">5. Luzes</a></li>
                 <li><a href="#cabos">6. Cabos</a></li>
-                <li><a href="#avaliacao">Avaliação</a></li>
+<!--                 <li><a href="#avaliacao">Avaliação</a></li> -->
+                <li><a href="../index.html">Voltar</a></li>
             </ul>
         </nav>
     
@@ -284,7 +284,7 @@
 <!--             <p style="margin-bottom: 1.5rem; color: var(--text-secondary);">Parabéns! Com estes passos simples, você já está cuidando muito melhor da sua moto. Para dúvidas, agende uma consultoria!</p><br> -->
 <!--             <a href="https://wa.me/5538988340443?text=Ol%C3%A1%20Dr.%20Yamaha!%20Quero%20uma%20consultoria." target="_blank" rel="noopener noreferrer" class="btn btn-whatsapp">Agendar Consultoria</a> -->
         </footer>
-        <a href="../index.html" class="btn">Voltar</a>
+<!--         <a href="../index.html" class="btn">Voltar</a> -->
     </div>
     </div>
     <audio id="quiz-audio" src="../assets/topic.mp3" preload="auto" loop></audio>
@@ -292,5 +292,6 @@
     <script src="../js/curso.js"></script>
     
 </html>
+
 
 
