--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li><a href="pages/calculadora.html">Calculadora de Custos</a>
                 <li><a href="pages/ebook.html">Dicas</a></li>
                 <li><a href="pages/duvidas.html">Dúvidas</a></li>
-                <li><a href="pages/simulador.html">Simulador de Revisões</a></li>
+                <!-- <li><a href="pages/simulador.html">Simulador de Revisões</a></li> -->
 <!--                 <li><a href="#sobre-mim">Sobre</a></li> -->
                 </li>
             </ul>
@@ -78,30 +78,7 @@
                         </path>
                     </svg>
                 </div>
-                <h3>Consultoria Pré-Compra (Moto Nova ou Usada)</h3>
-                <ul style="list-style-type: none;">
-                    <li>Identificação da Melhor Moto:</li>
-                        <p>Baseado nas necessidades do cliente (uso diário, viagens, lazer, aventura), orçamento, perfil de pilotagem e experiência.</p>
-                    <li>Análise de Mercado e Preços:</li>
-                        <p>Noções de preços de mercado (FIPE, tabela própria baseada na região e condição), análise de custo-benefício.
-                    <li>Inspeção Técnica de Veículos Usados:</li>
-                        <p>Acompanhamento em visitas (somente em Montes Claros - MG) para avaliação física da moto (motor, chassi, suspensão, elétrica, pneus, desgaste geral), identificação de vícios ocultos ou problemas futuros.</p><br>
-                    <h3>Preço: R$ 60,00</h3>
-                    <h4>ou "A partir de R$ 80,00/hora"</h4>
-                    <p><br><a href="pages/agendamento.html"
-                        target="_blank" rel="noopener noreferrer" class="btn btn-whatsapp">Agendar Consulta</a></p>
-                </ul>
-            </div>
-            <div id="curso" class="card">
-                <div class="card-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none"
-                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
-                        style="margin: 0 auto;">
-                        <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path>
-                        <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path>
-                    </svg>
-                </div>
-                <h3>Consultoria de Manutenção e Otimização</h3>
+                <h3>Manutenção e Otimização</h3>
                 <ul style="list-style-type: none;">
                     <li>Plano de Manutenção Personalizado:</li>
                         <p>Criação de um cronograma de manutenção preventiva baseado no modelo, ano, quilometragem e uso da moto.</p>
@@ -111,8 +88,8 @@
                         <p>Sugestão dos melhores produtos (filtros, óleos, pneus, pastilhas, kits de relação, acessórios de segurança/performance) com base em custo-benefício e qualidade.</p>
                     <li>Otimização de Performance e Segurança:</li>
                         <p>Recomendações para melhorar o desempenho, a pilotagem e a segurança da moto.</p><br>
-                    <h3>Preço: R$ 80,00</h3>
-                    <h4>ou "A partir de R$ 100,00/hora"</h4>
+                    <!-- <h3>Preço: R$ 80,00</h3>
+                    <h4>ou "A partir de R$ 100,00/hora"</h4> -->
                     <p><br><a href="pages/agendamento.html"
                         target="_blank" rel="noopener noreferrer" class="btn btn-whatsapp">Agendar Consulta</a></p>
                 </ul>
@@ -127,14 +104,37 @@
                         </path>
                     </svg>
                 </div>
-                <h3>Consultoria de Indicação e Acompanhamento de Serviços</h3>
+                <h3>Pré-Compra (Moto Nova ou Usada)</h3>
+                <ul style="list-style-type: none;">
+                    <li>Identificação da Melhor Moto:</li>
+                        <p>Baseado nas necessidades do cliente (uso diário, viagens, lazer, aventura), orçamento, perfil de pilotagem e experiência.</p>
+                    <li>Análise de Mercado e Preços:</li>
+                        <p>Noções de preços de mercado (FIPE, tabela própria baseada na região e condição), análise de custo-benefício.
+                    <li>Inspeção Técnica de Veículos Usados:</li>
+                        <p>Acompanhamento em visitas (somente em Montes Claros - MG) para avaliação física da moto (motor, chassi, suspensão, elétrica, pneus, desgaste geral), identificação de vícios ocultos ou problemas futuros.</p><br>
+                    <!-- <h3>Preço: R$ 60,00</h3>
+                    <h4>ou "A partir de R$ 80,00/hora"</h4> -->
+                    <p><br><a href="pages/agendamento.html"
+                        target="_blank" rel="noopener noreferrer" class="btn btn-whatsapp">Agendar Consulta</a></p>
+                </ul>
+            </div>
+            <div id="curso" class="card">
+                <div class="card-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none"
+                        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                        style="margin: 0 auto;">
+                        <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path>
+                        <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path>
+                    </svg>
+                </div>
+                <h3>Indicação e Acompanhamento de Serviços</h3>
                 <ul style="list-style-type: none;">
                     <li>Rede de Confiança:</li>
                         <p>Indicação de oficinas mecânicas e prestadores de serviço confiáveis na região, baseada em sua experiência e conhecimento do mercado local.</p>
                     <li>Acompanhamento de Orçamentos:</li>
                         <p>Ajuda o cliente a entender orçamentos de serviços e peças, garantindo que não pague a mais ou que o serviço seja realmente necessário.</p><br>
-                    <h3>Preço: R$ 40,00</h3>
-                    <h4>ou "A partir de R$ 60,00/hora"</h4>
+                    <!-- <h3>Preço: R$ 40,00</h3>
+                    <h4>ou "A partir de R$ 60,00/hora"</h4> -->
                     <p><br><a href="pages/agendamento.html"
                         target="_blank" rel="noopener noreferrer" class="btn btn-whatsapp">Agendar Consulta</a></p>
                 </ul>
@@ -312,6 +312,7 @@
 </body>
 </html>
     
+
 
 
 
