Change greeting from 'Hello World' to 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container">
         <div class="header text-center">
             <article>
-                <h3>Sua jornada sobre duas rodas começa aqui.</h3>
+                <h3>Receba orientação especializada onde você estiver.</h3>
                 <br>
                 <p>Em nossa plataforma, a consultoria é mais do que um serviço: é um guia personalizado para a sua compra, manutenção, escolha de peças e planejamentos de orçamento. Queremos que você se sinta seguro e preparado, por isso oferecemos um curso gratuito que cobre o essencial, desde os primeiros passos até a manutenção básica.
                    Junte-se a nós e transforme sua experiência em algo extraordinário.
@@ -312,6 +312,7 @@
 </body>
 </html>
     
+
 
 
 
