--- a/index.html
+++ b/index.html
@@ -39,10 +39,9 @@
             <article>
                 <h3>Receba orientação especializada onde você estiver.</h3>
                 <br>
-                <p>Em nossa plataforma, a consultoria é mais do que um serviço: é um guia personalizado para a sua compra, manutenção, escolha de peças e planejamentos de orçamento. Queremos que você se sinta seguro e preparado, por isso oferecemos um curso gratuito que cobre o essencial, desde os primeiros passos até a manutenção básica.
-                   Junte-se a nós e transforme sua experiência em algo extraordinário.
+                <p>Em nossa plataforma, a consultoria é mais do que um serviço: é um guia personalizado para a sua compra, manutenção, escolha de peças e planejamentos de orçamento. Queremos que você se sinta seguro e preparado, junte-se a nós e transforme sua experiência em algo extraordinário.
                 </p>
-                    <a href="pages/curso.html" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" style="width: 50%; text-align: center;">Conheça nosso Curso Gratuito</a>
+                    <a href="pages/tele_mecanica.html" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" style="width: 50%; text-align: center;">Tirar Dúvida Rápida</a>
             </article>
         </div>
         <section id="galeria">
@@ -312,6 +311,7 @@
 </body>
 </html>
     
+
 
 
 
