--- a/index.html
+++ b/index.html
@@ -37,11 +37,18 @@
     <div class="container">
         <div class="header text-center">
             <article>
-                <h3>Receba orientação especializada onde você estiver.</h3>
-                <br>
-                <p>Em nossa plataforma, a consultoria é mais do que um serviço: é um guia personalizado para a sua compra, manutenção, escolha de peças e planejamentos de orçamento. Queremos que você se sinta seguro e preparado, junte-se a nós e transforme sua experiência em algo extraordinário.
-                </p>
-                    <a href="pages/tele_mecanica.html" target="_blank" rel="noopener noreferrer" class="btn btn-secondary" style="width: 50%; text-align: center;">Tirar Dúvida Rápida</a>
+                 <section class="bg-responsivo">
+                    <div class="container">
+                        <h1 style="color: white;">Receba orientação especializada onde você estiver.</h1>
+                        <p>Em nossa plataforma, a consultoria é mais do que um serviço: é um guia personalizado para a
+                            sua compra, manutenção, escolha de
+                            peças e planejamentos de orçamento. Queremos que você se sinta
+                            seguro e preparado, junte-se a nós e transforme sua experiência em algo extraordinário.
+                        </p>
+                        <a href="pages/tele_mecanica.html" target="_blank" rel="noopener noreferrer"
+                            class="btn btn-secondary">Tirar Dúvida Rápida</a>
+                    </div>
+                </section>
             </article>
         </div>
         <section id="galeria">
@@ -311,6 +318,7 @@
 </body>
 </html>
     
+
 
 
 
